{
  "version": 4,
  "terraform_version": "0.14.11",
  "serial": 63,
  "lineage": "b42d766f-8c57-0cb2-64e9-b5b8cb06290c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:security-group/sg-04fe001f8d1fa5926",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04fe001f8d1fa5926",
            "ingress": [],
            "name": "default",
            "owner_id": "126494010021",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab"
            },
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055543f9b8d0ffee6",
            "association_id": "eipassoc-0f30a55e8d7a1b18e",
            "domain": "vpc",
            "id": "eipalloc-055543f9b8d0ffee6",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-06b334c0a6d927260",
            "private_dns": "ip-10-1-0-196.ap-southeast-2.compute.internal",
            "private_ip": "10.1.0.196",
            "public_dns": "ec2-54-79-32-161.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.32.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nokia-lab-ap-southeast-2a-eip"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-ap-southeast-2a-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbbfb398b0984841",
            "association_id": "eipassoc-08f271fe25ef6fa5a",
            "domain": "vpc",
            "id": "eipalloc-0dbbfb398b0984841",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-09505f09a67dac604",
            "private_dns": "ip-10-1-2-180.ap-southeast-2.compute.internal",
            "private_ip": "10.1.2.180",
            "public_dns": "ec2-3-25-17-80.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.25.17.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nokia-lab-ap-southeast-2b-eip"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-ap-southeast-2b-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e27361fa52a326d",
            "association_id": "eipassoc-03421e5e5f68caf45",
            "domain": "vpc",
            "id": "eipalloc-00e27361fa52a326d",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0918c6a453bd40e25",
            "private_dns": "ip-10-1-4-234.ap-southeast-2.compute.internal",
            "private_ip": "10.1.4.234",
            "public_dns": "ec2-54-252-11-27.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.252.11.27",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nokia-lab-ap-southeast-2c-eip"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-ap-southeast-2c-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:internet-gateway/igw-092c9f0bc93b5277c",
            "id": "igw-092c9f0bc93b5277c",
            "owner_id": "126494010021",
            "tags": {
              "Name": "nokia-lab-igw"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-igw"
            },
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055543f9b8d0ffee6",
            "connectivity_type": "public",
            "id": "nat-049b78c0666b356fa",
            "network_interface_id": "eni-06b334c0a6d927260",
            "private_ip": "10.1.0.196",
            "public_ip": "54.79.32.161",
            "subnet_id": "subnet-0affe4c6aa2090917",
            "tags": {
              "Name": "nokia-lab-ap-southeast-2a"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-ap-southeast-2a"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbbfb398b0984841",
            "connectivity_type": "public",
            "id": "nat-04881d399df2b0aec",
            "network_interface_id": "eni-09505f09a67dac604",
            "private_ip": "10.1.2.180",
            "public_ip": "3.25.17.80",
            "subnet_id": "subnet-0602218966edcdb82",
            "tags": {
              "Name": "nokia-lab-ap-southeast-2b"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-ap-southeast-2b"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e27361fa52a326d",
            "connectivity_type": "public",
            "id": "nat-0293eb8616460eec0",
            "network_interface_id": "eni-0918c6a453bd40e25",
            "private_ip": "10.1.4.234",
            "public_ip": "54.252.11.27",
            "subnet_id": "subnet-0c93a52d334a12104",
            "tags": {
              "Name": "nokia-lab-ap-southeast-2c"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-ap-southeast-2c"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:network-acl/acl-018da540cfd104a73",
            "egress": [],
            "id": "acl-018da540cfd104a73",
            "ingress": [],
            "owner_id": "126494010021",
            "subnet_ids": [
              "subnet-0340e545928ba7a2a",
              "subnet-05163e45c69a43726",
              "subnet-0602218966edcdb82",
              "subnet-0affe4c6aa2090917",
              "subnet-0c93a52d334a12104",
              "subnet-0ef04a234e7aa4853"
            ],
            "tags": {
              "Name": "nokia-lab-public"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-public"
            },
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2483577671",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-018da540cfd104a73",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2226897278",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-018da540cfd104a73",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e75cd206645685041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-049b78c0666b356fa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e75cd20664568504",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-034e1a021f5d1c87e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04881d399df2b0aec",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034e1a021f5d1c87e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09cafe48baa61ad021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0293eb8616460eec0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09cafe48baa61ad02",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-092c9f0bc93b5277c",
            "id": "r-rtb-02cd1a11cbee20fbf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02cd1a11cbee20fbf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:route-table/rtb-0e75cd20664568504",
            "id": "rtb-0e75cd20664568504",
            "owner_id": "126494010021",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nokia-lab-private-ap-southeast-2a-natgw"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-private-ap-southeast-2a-natgw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:route-table/rtb-034e1a021f5d1c87e",
            "id": "rtb-034e1a021f5d1c87e",
            "owner_id": "126494010021",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nokia-lab-private-ap-southeast-2b-natgw"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-private-ap-southeast-2b-natgw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:route-table/rtb-09cafe48baa61ad02",
            "id": "rtb-09cafe48baa61ad02",
            "owner_id": "126494010021",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nokia-lab-private-ap-southeast-2c-natgw"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-private-ap-southeast-2c-natgw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:route-table/rtb-02cd1a11cbee20fbf",
            "id": "rtb-02cd1a11cbee20fbf",
            "owner_id": "126494010021",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "nokia-lab-public-rt"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c815c113ae8dfd6a",
            "route_table_id": "rtb-0e75cd20664568504",
            "subnet_id": "subnet-0340e545928ba7a2a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e65c41de5f07cb9c",
            "route_table_id": "rtb-034e1a021f5d1c87e",
            "subnet_id": "subnet-0ef04a234e7aa4853"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04655381a783abe0e",
            "route_table_id": "rtb-09cafe48baa61ad02",
            "subnet_id": "subnet-05163e45c69a43726"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdfdddc2d543c63e",
            "route_table_id": "rtb-02cd1a11cbee20fbf",
            "subnet_id": "subnet-0affe4c6aa2090917"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f01795549e5cf50f",
            "route_table_id": "rtb-02cd1a11cbee20fbf",
            "subnet_id": "subnet-0602218966edcdb82"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000934243fce4ecfd",
            "route_table_id": "rtb-02cd1a11cbee20fbf",
            "subnet_id": "subnet-0c93a52d334a12104"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:security-group/sg-0d9e315ee2e191fb4",
            "description": "Main Cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9e315ee2e191fb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "13.237.183.33/32"
                ],
                "description": "Allow internal communication with EKS backplane and CLUSTER_SECURITY_GROUP_RULES.IPSETS defined in vars.yaml.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "3.25.17.80/32"
                ],
                "description": "allow NAT Gateway EIP (3.25.17.80/32) on all ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "54.252.11.27/32"
                ],
                "description": "allow NAT Gateway EIP (54.252.11.27/32) on all ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "54.79.32.161/32"
                ],
                "description": "allow NAT Gateway EIP (54.79.32.161/32) on all ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "nokia-lab-cluster-sg-20221105095217124400000003",
            "name_prefix": "nokia-lab-cluster-sg-",
            "owner_id": "126494010021",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nokia-lab-cluster-sg"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:subnet/subnet-0340e545928ba7a2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0340e545928ba7a2a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126494010021",
            "tags": {
              "Name": "nokia-lab-subnet-private-ap-southeast-2a",
              "Network": "private",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-subnet-private-ap-southeast-2a",
              "Network": "private",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:subnet/subnet-0ef04a234e7aa4853",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0ef04a234e7aa4853",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126494010021",
            "tags": {
              "Name": "nokia-lab-subnet-private-ap-southeast-2b",
              "Network": "private",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-subnet-private-ap-southeast-2b",
              "Network": "private",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:subnet/subnet-05163e45c69a43726",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-05163e45c69a43726",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126494010021",
            "tags": {
              "Name": "nokia-lab-subnet-private-ap-southeast-2c",
              "Network": "private",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-subnet-private-ap-southeast-2c",
              "Network": "private",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:subnet/subnet-0affe4c6aa2090917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0affe4c6aa2090917",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126494010021",
            "tags": {
              "Name": "nokia-lab-subnet-public-ap-southeast-2a",
              "Network": "public",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-subnet-public-ap-southeast-2a",
              "Network": "public",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:subnet/subnet-0602218966edcdb82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0602218966edcdb82",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126494010021",
            "tags": {
              "Name": "nokia-lab-subnet-public-ap-southeast-2b",
              "Network": "public",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-subnet-public-ap-southeast-2b",
              "Network": "public",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:subnet/subnet-0c93a52d334a12104",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0c93a52d334a12104",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "126494010021",
            "tags": {
              "Name": "nokia-lab-subnet-public-ap-southeast-2c",
              "Network": "public",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-subnet-public-ap-southeast-2c",
              "Network": "public",
              "kubernetes.io/cluster/nokia-lab": "shared"
            },
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:vpc/vpc-0cb7de6f94724100b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0245a8a3c7e9eda0b",
            "default_route_table_id": "rtb-0412d12ff76e73ed8",
            "default_security_group_id": "sg-04fe001f8d1fa5926",
            "dhcp_options_id": "dopt-031020e46fb020284",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cb7de6f94724100b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0412d12ff76e73ed8",
            "owner_id": "126494010021",
            "tags": {
              "Name": "nokia-lab-vpc"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:126494010021:vpc-endpoint/vpce-07e648b5f809d48f7",
            "cidr_blocks": [
              "3.5.164.0/22",
              "3.5.168.0/23",
              "52.95.128.0/21"
            ],
            "id": "vpce-07e648b5f809d48f7",
            "owner_id": "126494010021",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ca54005",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-034e1a021f5d1c87e",
              "rtb-09cafe48baa61ad02",
              "rtb-0e75cd20664568504"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.s3",
            "state": "available",
            "tags": {
              "Name": "nokia-lab-vpce-s3"
            },
            "tags_all": {
              "ClusterRegion": "nokia-lab-ap-southeast-2",
              "Component": "EKS cluster",
              "DeployerTool": "CsfpOps",
              "KubernetesCluster": "nokia-lab",
              "Name": "nokia-lab-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0cb7de6f94724100b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.this",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    }
  ]
}